Fix auto-collapse conflict with setBtnCollapseTask

--- a/src/pages/popup/components/Collapse/index.scss
+++ b/src/pages/popup/components/Collapse/index.scss
@@ -1,4 +1,21 @@
 .collapse {
+	.icon-text {
+		display: flex;
+		align-items: center;
+		gap: 10px;
+
+		h1 {
+			margin: 0;
+			color: #ddd;
+		}
+
+		button {
+			margin: 0;
+			font-size: 1rem;
+			padding: 0.6rem 1.4rem;
+		}
+	}
+
 	.btn-grp {
 		display: flex;
 		align-items: center;
